<resources>
    <string name="app_name">Damiantour</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2ltb25iZXR0ZW5zIiwiYSI6ImNrZzVjNW53bDBzc2kydnA0Yml4bjViZW0ifQ.VxkKMCFOFglLvZC66cfk1A</string>
    <string name="user_location_permission_explanation">Deze app gebruikt uw locatie</string>
    <string name="user_location_permission_not_granted">U heeft de locatie niet gedeeld.</string>
    <string name="email_input">Email</string>
    <string name="password_input">Wachtwoord</string>
    <string name="login">Inloggen</string>
    <string name="lost_password">Wachtwoord vergeten</string>
    <string name="damiaan_logo_login_description">Logo van de Damiaan Experience</string>
    <string name="login_background_description">Background login screen</string>
    <string name="password_hint">Wachtwoord</string>
    <string name="qr_code_reader">QR</string>
    <string name="chat">Chat</string>
    <string name="map">Map</string>
    <string name="instellingen">Instellingen</string>
    <string name="sos">SOS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wip_text">Work In Progress</string>
    <string name="login_error">Het e-mailadres of paswoord is ongeldig</string>
    <string name="start_route_success_start">U kan nu de wandeling starten. \nVeel succes!</string>
    <string name="start_route_success_wait">De wandeling is nog niet begonnen.\nNog even wachten</string>
    <string name="start_route">Start route</string>
    <string name="start_route_not_registered_text">U bent nog niet voor een wandeling geregistreerd. \nKlik op onderstaande knop om je in te schrijven!</string>
    <string name="inschrijven">Schrijf me in</string>
    <string name="opnieuwProberen">retry connection</string>
    <string name="call_organisation">Bel de organisatie</string>
    <string name="bel_112">Bel 112</string>
    <string name="open_112_app">Open de 112 app</string>
    <string name="organisation_phonenumber">+32 123 456 789</string>
    <string name="_112_app_name">be.Nextel.EmergencyApp112</string>

    <string name="sos_phonenumber">112</string>
    <string name="days">DAYS</string>
    <string name="hours">HOURS</string>
    <string name="minutes">MINUTES</string>
    <string name="nullNumber">0</string>
    <string name="seconds">SECONDS</string>
    <string name="damiaan_logo_start_route">description_damiaan_logo_start_route</string>
    <string name="batterijBesparing">BatterijBesparing</string>
    <string name="text_locatieDelen">Om de hoeveel minuten wenst u uw locatie te delen?</string>
    <string name="text_logout">Logout</string>
    <string name="text_notifications">Notificaties</string>
    <string name="text_deelnemerscode">Deelnemer link</string>
    <string name="text_aanUitZetten">Aan of uit zetten</string>
    <string name="text_deelnemerscodeGenerated">DeelnemerscodeDummy</string>
    <string name="text_appWerking">Hoe werkt de app?</string>
    <string name="text_ingelogd_als">Ingelogd als</string>
    <string name="text_share">share link met de wereld</string>
    <string name="text_gebruikersnaam">Jonas Haenebalcke</string>
    <string name="text_maxSeekbar">25</string>
    <string name="text_minSeekbar">5</string>
    <string name="text_deellink">Ik doe mee aan de Damien Experience wandeling. Volg me hier via deze link!</string>

    <string name="stop_button">STOP</string>
    <string name="stop_dialog_title">Stop wandeling</string>
    <string name="stop_dialog_message">Bent u zeker dat u de wandeling wilt stopzetten?</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>

    <string name="speed_unit">km/u</string>
    <string name="distance_unit">km</string>
    <string name="congratulations">proficiat</string>
    <string name="je_hebt_een_totaal_van">Je hebt een totaal van</string>
    <string name="gewandeld">gewandeld.</string>
    <string name="je_gemiddelde_snelheid_was">Je gemiddelde snelheid was</string>
    <string name="go_back_button">Ga Terug</string>
    <string name="chatSocketURI">https://damienexperience-chat.herokuapp.com/</string>
    <string name="testSendBtn">Button</string>
    <string name="comingSoon">Coming soon!</string>

    <!-- error meldingingen -->
    <string name="fout_ophalen_route">Er is probleem met het ophalen van de route </string>
    <string name="fout_ophalen_registration">Kon de registratie niet ophalen</string>
    <string name="fout_start_wandeling">Je kan deze wandeling niet starten</string>



</resources>
